fixed InternshipValidator and tests for it